<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cerveza Countdown</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="arrivalDateTime">Thu October 24, 2013, 01:50 PM</string>
    <string name="headerPrefix">Countdown to arrival in Mexico:</string>
    <string name="welcomeToMexico">Bienvenidos a Mexico!</string>
    <string name="moreBeerPlease">Mas cerveza por favor!</string>
    <string name="timePlaceholder">0</string>
    <string name="daysLabel">days</string>
    <string name="hoursLabel">hours</string>
    <string name="minutesLabel">minutes</string>
    <string name="secondsLabel">seconds</string>
    <string name="action_exit">Exit</string>
    <string name="copyright">\u00a9 Shane Genschaw 2013</string>
    
</resources>
